--- a/views/tmpl/admin/support/technician-profile.html
+++ b/views/tmpl/admin/support/technician-profile.html
@@ -97,7 +97,7 @@
 												</div>
 												<div class="col-sm-6 col-sm-6">
 													<label for="address1">Zip Code <span class="text-danger">*</span></label>
-													<input type="number" class="form-control" id="address1" ng-model="addTechnician.technician_zipcode" maxlength="6" required="required">
+													<input type="text" class="form-control" id="address1" ng-model="addTechnician.technician_zipcode" maxlength="6" required="required">
 												</div>
 											</div>
 											<div class="form-group row">
