--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -43,7 +43,7 @@
 														<input type="text" name="" id="" class="form-control" ng-model="door.name" placeholder="" maxlength="30" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6 last">
-														<label for="">Facility {{door.facility_id}}<span class="text-danger">*</span></label><br/>
+														<label for="">Facility <span class="text-danger">*</span></label><br/>
 														<select class="form-control" ng-disabled="facility_disable" ng-model="door.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList"
 														 required>
 															<option value="">Select</option>
