--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -515,7 +515,7 @@
 																	<div class="form-group col-sm-6 col-md-3">
 																		<label for="">Type</label><br/>
 																		<div class="btn-group btnrounded status" ng-controller="ActivebtnCtrl">
-																			<label class="btn btn-default" ng-model="phoneCode.type1" uib-btn-radio=1>Hunting</label>
+																			<label class="btn btn-default" ng-model="phoneCode.type1" ng-init="phoneCode.type1 = 1" uib-btn-radio=1>Hunting</label>
 																			<label class="btn btn-default" ng-model="phoneCode.type1" uib-btn-radio=0>Cascading</label>
 																		</div>
 																	</div>
@@ -544,7 +544,7 @@
 																	<div class="form-group col-sm-6 col-md-3">
 																		<label for="">Type</label><br/>
 																		<div class="btn-group btnrounded status" ng-controller="ActivebtnCtrl">
-																			<label class="btn btn-default" ng-model="phoneCode.type2" uib-btn-radio=1>Hunting</label>
+																			<label class="btn btn-default" ng-model="phoneCode.type2" ng-init="phoneCode.type2 = 1" uib-btn-radio=1>Hunting</label>
 																			<label class="btn btn-default" ng-model="phoneCode.type2" uib-btn-radio=0>Cascading</label>
 																		</div>
 																	</div>
@@ -573,7 +573,7 @@
 																	<div class="form-group col-sm-6 col-md-3">
 																		<label for="">Type</label><br/>
 																		<div class="btn-group btnrounded status" ng-controller="ActivebtnCtrl">
-																			<label class="btn btn-default" ng-model="phoneCode.type3" uib-btn-radio=1>Hunting</label>
+																			<label class="btn btn-default" ng-model="phoneCode.type3" ng-init="phoneCode.type3 = 1" uib-btn-radio=1>Hunting</label>
 																			<label class="btn btn-default" ng-model="phoneCode.type3" uib-btn-radio=0>Cascading</label>
 																		</div>
 																	</div>
