--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -28,12 +28,12 @@
 				{{result}}
 			</div>
 		</div>
-		<div ng-controller="ModalDemo2Ctrl">
+		<div ng-controller="ModalDemo2Ctrl" >
 		<script type="text/ng-template" id="myModalContent2.html">
 			<form name="form1" role="form"  >
 				<div class="modal-header"><h4 class="modal-title custom-font">Add Schedule</h4></div>
-				<div class="modal-body p-30">
-					<div class="overflow check_view">
+				<div class="modal-body p-30" >
+					<div class="overflow check_view"  style="pointer-events: none;">
 						<label for=""><strong>Schedule Type</strong></label>
 						<div class="row">
 							<div class="col-sm-6 col-md-6 form-group" ng-click="custom_schedular()">
@@ -48,7 +48,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row check_view" ng-init="visibiltyUserGroup=true"  ng-hide="visibiltyUserGroup">
+					<div class="row check_view" ng-init="visibiltyUserGroup=true"  ng-hide="visibiltyUserGroup"  style="pointer-events: none;">
 						<div class="col-sm-6 col-md-6 pr-0 form-group">
 							<label for="">Start Date</label>
 							<div class="input-group" ng-controller="DatepickerDemoCtrl">
@@ -94,8 +94,6 @@
 				</div>
 				<div class="modal-footer">
 					<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
-					<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c close_add" ng-click="cancel()" ng-hide="schedule.schedule_id"><i class="fa fa-arrow-right" ></i> Save</button>	
-					<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c" ng-click="check_submit(schedule.schedule_id, schedule)" ng-show="schedule.schedule_id"><i class="fa fa-arrow-right"></i> Save</button>	
 				</div>
 			</form>		
 		</script>
@@ -178,7 +176,7 @@
 																		<td>{{accesscode.Access_Code}}</td>
 																		<td>{{accesscode.Door_Name}}</td>
 																		<td class="credintialicon ta-c">
-																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(accesscode.credential_schedule_id, 'view')" ><i class="fa fa-eye" aria-hidden="true"></i></a> 
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(accesscode.credential_schedule_id, 'view')" ng-if="accesscode.credential_schedule_id"><i class="fa fa-eye" aria-hidden="true"></i></a> 
 																		</td>
 																		<td class="ta-c">{{accesscode.status==0?'Inactive':'Active'}}</td>
 																	</tr>
@@ -209,7 +207,9 @@
 																		<td>
 																			<div ng-repeat="phone in phone_code.Detail.phone_numbers">{{phone.phone_number|tel}}</div>
 																		</td>
-																		<td class="credintialicon ta-c"></td>
+																		<td class="credintialicon ta-c">
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(phone.credential_schedule_id, 'view')" ng-if="phone.credential_schedule_id" ><i class="fa fa-eye" aria-hidden="true"></i></a>
+																		</td>
 																		<td class="ta-c">{{phone_code.status==0?'Inactive':'Active'}}</td>
 																	</tr>
 																</tbody>
@@ -218,7 +218,7 @@
 													</div>
 												</uib-accordion-group>
 												
-												<uib-accordion-group is-open="status.open2" class="panel-default">
+												<!-- <uib-accordion-group is-open="status.open2" class="panel-default">
 													<uib-accordion-heading>RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></uib-accordion-heading>
 													<div class="modal-body p-0">
 														<div class="tile-body p-0 table-responsive">
@@ -244,7 +244,7 @@
 															</table>
 														</div>
 													</div>
-												</uib-accordion-group>
+												</uib-accordion-group> -->
 												
 												<uib-accordion-group is-open="status.open3" class="panel-default">
 													<uib-accordion-heading>Wiegand Code <i class="pull-right fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i></uib-accordion-heading>
@@ -266,7 +266,9 @@
 																		<td>{{wiegand_code.Detail.wiegand_card_number}}</td>
 																		<td>{{wiegand_code.Door_Name}}</td>
 																		<td>{{wiegand_code.Detail.wiegand_facility_code}}</td>
-																		<td class="credintialicon ta-c"></td>
+																		<td class="credintialicon ta-c">
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(wiegand_code.credential_schedule_id, 'view')" ng-if="wiegand_code.credential_schedule_id"><i class="fa fa-eye" aria-hidden="true"></i></a>
+																		</td>
 																		<td class="ta-c">{{wiegand_code.status==0?'Inactive':'Active'}}</td>
 																	</tr>
 																</tbody>
@@ -275,7 +277,7 @@
 													</div>
 												</uib-accordion-group>
 												
-												<uib-accordion-group is-open="status.open4" class="panel-default">
+												<!-- <uib-accordion-group is-open="status.open4" class="panel-default">
 													<uib-accordion-heading>NFC Code <i class="pull-right fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i></uib-accordion-heading>
 													<div class="modal-body p-0">														
 														<span class="error">{{NfcCodeMessage}}</span>
@@ -302,7 +304,7 @@
 															</table>
 														</div>
 													</div>
-												</uib-accordion-group>
+												</uib-accordion-group> -->
 												
 												<uib-accordion-group is-open="status.open5" class="panel-default">
 													<uib-accordion-heading>BLE Code <i class="pull-right fa" ng-class="{'fa-minus': status.open5, 'fa-plus': !status.open5}"></i></uib-accordion-heading>
@@ -324,7 +326,9 @@
 																		<td>{{blecode.Detail.ble_username}}</td>
 																		<td>{{blecode.Detail.ble_password}}</td>
 																		<td>{{blecode.Door_Name}}</td>
-																		<td class="credintialicon ta-c"></td>
+																		<td class="credintialicon ta-c">
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(blecode.credential_schedule_id, 'view')" ><i class="fa fa-eye" aria-hidden="true" ng-if="blecode.credential_schedule_id"></i></a>
+																		</td>
 																		<td class="ta-c">{{blecode.status==0?'Inactive':'Active'}}</td>
 																	</tr>
 																</tbody>
