--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -1,34 +1,34 @@
-<div class="page admin">	
-	<div class="pageheader backpage">		
+<div class="page admin">
+	<div class="pageheader backpage">
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
 	</div>
-	
-	<div class="pagecontent">	
-		<div class="row">		
+
+	<div class="pagecontent">
+		<div class="row">
 			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
 						<div class="bg-transparent pdevicebg">
 							<div class="row">
 								<div class="col-md-12">
-									<h3 class="custom-font">Warehouse Dashboard</h3>								
+									<h3 class="custom-font">Warehouse Dashboard</h3>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>			
+			</div>
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.inventory.devices">
-						<div class="noback bg-blue">	
+						<div class="noback bg-blue">
 							<div class="itxt">
 								<span class="text-lg">Warehouse Inventory Management</span>
 							</div>
 						</div>
 					</a>
 				</div>
-			</div>			
+			</div>
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.firmware.firmware-management">
@@ -39,7 +39,7 @@
 						</div>
 					</a>
 				</div>
-			</div>			
+			</div>
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.monitor-diagnostics-and-reported-issues">
@@ -50,9 +50,9 @@
 						</div>
 					</a>
 				</div>
-			</div>			
+			</div>
 		</div>
-		
+
 		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow">
@@ -63,12 +63,15 @@
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
 										<form name="form1" role="form" ng-validate ng-submit="submitAddFirmware(addFirmware,file,form1)">
-											<div class="modal-header"><h4 class="modal-title custom-font">Add Configuration Device</h4></div>
+											<div class="modal-header">
+												<h4 class="modal-title custom-font">Add Configuration Device</h4>
+											</div>
 											<div class="modal-body mt-5">
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Model <span class="text-danger">*</span></label><br/>
-														<select name="device_name" class="form-control" ng-model="addFirmware.device_model" ng-options="model for model in deviceModel" ng-change="deviceHardware(addFirmware.device_model)" required="required">
+														<select name="device_name" class="form-control" ng-model="addFirmware.device_model" ng-options="model for model in deviceModel"
+														 ng-change="deviceHardware(addFirmware.device_model)" required="required">
 															<option value="">Select</option>
 														</select>
 													</div>
@@ -86,23 +89,27 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Hardware Version <span class="text-danger">*</span></label><br/>
-														<select name="hardware" class="form-control" ng-model="addFirmware.hardware_version" ng-options="version for version in hardwareVersions" required="required">
+														<select name="hardware" class="form-control" ng-model="addFirmware.hardware_version" ng-options="version for version in hardwareVersions"
+														 required="required">
 															<option value="">Select</option>
 														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version <span class="text-danger">*</span></label><br/>
 														<input name="firmware" class="form-control" type="text" ng-model="addFirmware.firmware_version" required="required">
-														
+
 													</div>
 												</div>
 												<div class="row">
-													
+
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Upload Firmware <span class="text-danger">*</span></label>
 														<div class="profilephoto">
-															<input type="file" file-model="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1" required="required">
-															<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+															<input type="file" file-model="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }"
+															 id="profilep-2" tabindex="-1" required="required">
+															<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span>																Find file</label>
+																</span>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -115,33 +122,19 @@
 											</div>
 											<div class="modal-footer">
 												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
-												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>
 											</div>
-										</form>		
+										</form>
 									</script>
 									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Firmware</span></a>
-								</div>								
+								</div>
 							</li>
 						</ul>
 					</div>
-					
+
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-10 pb-20">
-								<div class="col-sm-2 col-md-3 filterorder">
-									<!--label class="control-label" ng-init="filtershow=true">
-										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Search by</a>
-									</label-->
-									<!--label class="control-label" uib-dropdown on-toggle="toggled(open)">
-										<a href uib-dropdown-toggle style="border-right: 0 none; ">Order by</a>
-										<ul class="dropdown-menu with-arrow animated littleFadeInUp">
-											<li><a href="" ng-click="orderByMe('component')">Component</a></li>
-											<li><a href="" ng-click="orderByMe('devicemodel')">Device Model</a></li>
-											<li><a href="" ng-click="orderByMe('hardware')">Hardware Version</a></li>
-											<li><a href="" ng-click="orderByMe('firmware')">Firmware Version</a></li>
-										</ul>
-									</label-->
-								</div>
 								<div class="col-sm-8 col-md-6">
 									<div class="row">
 										<div class="col-sm-7 col-md-9 search">
@@ -152,23 +145,30 @@
 											<div ng-controller="ModalDemo2Ctrl">
 												<script type="text/ng-template" id="myModalContent2.html">
 													<form name="form1" role="form">
-														<div class="modal-header"><h4 class="modal-title custom-font">Upload CSV File</h4></div>
+														<div class="modal-header">
+															<h4 class="modal-title custom-font">Upload CSV File</h4>
+														</div>
 														<div class="modal-body mt-5 pb-30 mb-40">
 															<label for="">Upload CSV file</label>
 															<div class="profilephoto">
-																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
-															</div>											
+																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2"
+																 tabindex="-1">
+																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn"
+																	 tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span>																	Find file</label>
+																	</span>
+																</div>
+															</div>
 														</div>
 														<div class="modal-footer">
 															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
-															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>	
+															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>
 														</div>
-													</form>		
+													</form>
 												</script>
 												<!-- <span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span> -->
 											</div>
 										</div>
+
 									</div>
 								</div>
 
@@ -190,15 +190,22 @@
 										<input type="text" class="form-control" id="" ng-model="filestructure">
 									</div>
 								</div-->
+								<div class="col-sm-3 col-md-6">
+									<div class="gridlistbar gridlistbar599 ta-r pull-right">
+										<label class="control-label">View by</label>
+										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
+										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
+									</div>
+								</div>
 							</div>
-							<div ng-if="result">									
-								<div layout="row" ng-class="statusclass">							
+							<div ng-if="result">
+								<div layout="row" ng-class="statusclass">
 									{{result}}
 								</div>
 							</div>
 							<div ng-class="class">
 								<div class="glview">
-									<md-content>			
+									<md-content>
 										<md-card ng-repeat="firmware in firmwares | limitTo:totalDisplayed | filter:text | filter:component | filter:devicemodel | filter:hardware | filter:firmware | orderBy:myOrderBy track by firmware.firmware_id">
 											<md-card-content>
 												<h2 class="md-title">{{ firmware.firmware_component }}</h2>
@@ -211,7 +218,7 @@
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.firmware.view-firmware({firmware_id:firmware.firmware_id})">View</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event,firmware.firmware_id)">Delete</a>
 											</div>
-										</md-card>										
+										</md-card>
 									</md-content>
 									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
