--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -40,12 +40,12 @@
 												<div class="row">
 													<div class="form-group col-md-6">
 														<label for="">Group Name</label>
-														<input type="text" name="name" id="" class="form-control" maxlength="30" placeholder="" ng-model="doorGrp.name" required>
+														<input type="text" name="name" id="" no-space class="form-control" maxlength="30" placeholder="" ng-model="doorGrp.name" required>
 													</div>
 													<div class="form-group col-md-6">
 														<label for="">Facility</label><br/>
 														<select name="facility" id="mySelect" class="form-control" ng-options="item.facility_id as item.facility_name for item in facilityList"
-														 ng-model="doorGrp.facility_id" ng-init="doorGrp.facility_id = facilityId" required><option value="">Select</option></select>
+														 ng-model="doorGrp.facility_id" required><option value="">Select</option></select>
 													</div>
 												</div>
 												<div class="form-group">
