--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -191,12 +191,18 @@
 										<md-card ng-repeat="device in devices | limitTo:totalDisplayed | filter:text | filter:title | filter:client | filter:serialno | filter:registrationcode | orderBy:myOrderBy track by device.device_id">
 											<md-card-content>
 												<h2 class="md-title">{{ device.device_serial_no }}</h2>
-												<p><span>Model No</span><span class="devicelengths">: {{ device.device_model}}</span></p>
-												<p><span>Client</span><span class="devicelengths">: {{ device.facility_name | warehouseClientNameInList}}</span></p>
-												<p><span>Serial No.</span> : {{ device.device_serial_no }}</p>
-												<p><span>Reg Code</span><span class="devicelengths">: {{ device.device_registration_code }}</span></p>
-												<p><span>Mac Id</span> : {{ device.device_mac_address }}</p>
-												<p><span>Create Date</span> : {{ device.device_created_on | date :  "dd.MM.y"  }}</p>
+												<div class="overflow">
+													<div class="list-view">
+														<p><span>Model No</span><span class="devicelengths">: {{ device.device_model}}</span></p>
+														<p><span>Client</span><span class="devicelengths">: {{ device.facility_name | warehouseClientNameInList}}</span></p>
+														<p><span>Serial No.</span> : {{ device.device_serial_no }}</p>
+													</div>
+													<div class="list-view grid-hide">
+														<p><span>Reg Code</span><span class="devicelengths">: {{ device.device_registration_code }}</span></p>
+														<p><span>Mac Id</span> : {{ device.device_mac_address }}</p>
+														<p><span>Create Date</span> : {{ device.device_created_on | date :  "dd.MM.y"  }}</p>
+													</div>
+												</div>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.inventory.view-device({device_id:device.device_id})">View</a>
