--- a/views/tmpl/admin/administrator/admin-profile.html
+++ b/views/tmpl/admin/administrator/admin-profile.html
@@ -62,15 +62,15 @@
 									<div class="profile-settings"> 
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Name</label> Arnold</p>
-												<p><label>Email</label> arnold1234@gmail.com</p>
-												<p><label>Phone</label> +1 212 1467 1212</p>
-												<p><label>Zip Code</label> 90001</p>
-												<p><label>Username</label> admin</p>
-												<p><label>Password</label> *********</p>
-												<p><label>Secret Question</label> In what city were you born?</p>
-												<p><label>Secret Answer</label> Los Angeles</p>
-												<p><label>Roles</label> Super Administrator</p>
+												<p><label>Name</label><span class="rightdetails">Arnold</span></p>
+												<p><label>Email</label><span class="rightdetails">arnold1234@gmail.com</span></p>
+												<p><label>Phone</label><span class="rightdetails">+1 212 1467 1212</span></p>
+												<p><label>Zip Code</label><span class="rightdetails">90001</span></p>
+												<p><label>Username</label><span class="rightdetails">admin</span></p>
+												<p><label>Password</label><span class="rightdetails">*********</span></p>
+												<p><label>Secret Question</label><span class="rightdetails">In what city were you born?</span></p>
+												<p><label>Secret Answer</label><span class="rightdetails">Los Angeles</span></p>
+												<p><label>Roles</label><span class="rightdetails">Super Administrator</span></p>
 											</div>											
 										</div>
 										
