--- a/views/tmpl/admin/administrator/view-roles.html
+++ b/views/tmpl/admin/administrator/view-roles.html
@@ -48,9 +48,9 @@
 					<div class="tile-body"> 
 						<div class="row">
 							<div class="form-group col-sm-12 profiledetail">
-								<p><label>Roles Name</label> Data Operator Administrator</p>
-								<p><label>Status</label> Active</p>
-								<p><label>Access</label> Restricted Access</p>
+								<p><label>Roles Name</label><span class="rightdetails">Data Operator Administrator</span></p>
+								<p><label>Status</label><span class="rightdetails">Active</span></p>
+								<p><label>Access</label><span class="rightdetails">Restricted Access</span></p>
 							</div>											
 						</div>
 						
