--- a/views/tmpl/admin/permissions/admin-profile.html
+++ b/views/tmpl/admin/permissions/admin-profile.html
@@ -131,13 +131,13 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Name</label> Arnold</p>
-												<p><label>Email</label> arnold1234@gmail.com</p>
-												<p><label>Phone</label> +1 212 1467 1212</p>
-												<p><label>Address</label> 558 Margaret Street, LOS ANGELES, CA-90001, USA</p> 
-												<p><label>Zip Code</label> 90001</p>
-												<p><label>Roles</label> Admin</p>
-												<p><label>Access</label> Full Access</p>
+												<p><label>Name</label><span class="rightdetails">Arnold</span></p>
+												<p><label>Email</label><span class="rightdetails">arnold1234@gmail.com</span></p>
+												<p><label>Phone</label><span class="rightdetails">+1 212 1467 1212</span></p>
+												<p><label>Address</label><span class="rightdetails">558 Margaret Street, LOS ANGELES, CA-90001, USA</span></p> 
+												<p><label>Zip Code</label><span class="rightdetails">90001</span></p>
+												<p><label>Roles</label><span class="rightdetails">Admin</span></p>
+												<p><label>Access</label><span class="rightdetails">Full Access</span></p>
 											</div>											
 										</div>
 										
