--- a/views/tmpl/admin/permissions/view-roles.html
+++ b/views/tmpl/admin/permissions/view-roles.html
@@ -65,9 +65,9 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Roles Name</label> Super Admin</p>
-												<p><label>Status</label> Active</p>
-												<p><label>Access</label> Full Access</p>
+												<p><label>Roles Name</label><span class="rightdetails">Super Admin</span></p>
+												<p><label>Status</label><span class="rightdetails">Active</span></p>
+												<p><label>Access</label><span class="rightdetails">Full Access</span></p>
 											</div>											
 										</div>
 										
