--- a/views/tmpl/admin/device/view-device.html
+++ b/views/tmpl/admin/device/view-device.html
@@ -67,13 +67,13 @@
 												<h4><strong>Device</strong> Details <span class="pull-right"><a class="text-sm text-lightred" ui-sref="app.admin.device.edit-device({device_id:device_id})">Edit Device</a></span></h4>
 											</div>
 											<div class="form-group profiledetail">
-												<p><label>Facility Name</label> {{details.facility_name}}</p>
-												<p><label>Device Name</label> {{details.device_name}}</p>
-												<p><label>Doors</label> {{showDoorsForDevice(details.doors)}}</p>
-												<p><label>Model Name</label> {{details.device_model}}</p>
-												<p><label>Serial No.</label> {{details.device_serial_no}}</p>
-												<p><label>Device Type</label> {{details.device_type}}</p>
-												<p><label>Technician</label> {{details.technician_name}}</p>												
+												<p><label>Facility Name</label><span class="rightdetails">{{details.facility_name}}</span></p>
+												<p><label>Device Name</label><span class="rightdetails">{{details.device_name}}</span></p>
+												<p><label>Doors</label><span class="rightdetails">{{showDoorsForDevice(details.doors)}}</span></p>
+												<p><label>Model Name</label><span class="rightdetails">{{details.device_model}}</span></p>
+												<p><label>Serial No.</label><span class="rightdetails">{{details.device_serial_no}}</span></p>
+												<p><label>Device Type</label><span class="rightdetails">{{details.device_type}}</span></p>
+												<p><label>Technician</label><span class="rightdetails">{{details.technician_name}}</span></p>
 											</div>
 										</div>
 									</div>
