--- a/views/tmpl/admin/door/view-door.html
+++ b/views/tmpl/admin/door/view-door.html
@@ -61,11 +61,9 @@
 								<div class="row">
 									<div class="col-sm-12 col-md-12">
 										<div class="form-group profiledetail">
-											<p><label>Device</label> {{(doorData.device_name == "") ? 'Not Assigned' : doorData.device_name}}</p>
-											<p><label>Name</label> {{doorData.door_name}}</p>
-											<p><label>Facility</label> {{doorData.facility_name}}</p>
-											<!--<p><label>Door Groups</label> Entry Gate</p> -->
-											<!-- <p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p> -->
+											<p><label>Device</label><span class="rightdetails">{{(doorData.device_name == "") ? 'Not Assigned' : doorData.device_name}}</span></p>
+											<p><label>Name</label><span class="rightdetails">{{doorData.door_name}}</span></p>
+											<p><label>Facility</label><span class="rightdetails">{{doorData.facility_name}}</span></p>
 										</div>
 									</div>
 								</div>
