--- a/views/tmpl/admin/door/view-doors.html
+++ b/views/tmpl/admin/door/view-doors.html
@@ -75,11 +75,9 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Name</label> {{(doorData.device_name == "") ? 'Not Assigned' : doorData.device_name}}</p>
-												<p><label>Facility</label> {{doorData.facility_name}}</p>
-												<p><label>Device</label> {{doorData.device_name}}</p>
-												<!-- <p><label>Door Groups</label> </p> -->
-												<!-- <p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p> -->
+												<p><label>Name</label><span class="rightdetails">{{(doorData.device_name == "") ? 'Not Assigned' : doorData.device_name}}</span></p>
+												<p><label>Facility</label><span class="rightdetails">{{doorData.facility_name}}</span></p>
+												<p><label>Device</label><span class="rightdetails">{{doorData.device_name}}</span></p>
 											</div>											
 										</div>
 										
