--- a/views/tmpl/admin/facility/view-facility.html
+++ b/views/tmpl/admin/facility/view-facility.html
@@ -77,14 +77,14 @@
 						<div class="hometabs">
 							<div class="wrap-reset m-0 pt-20">
 								<div class="form-group profiledetail">
-									<p><label>Name</label> {{facility.facility_name}}</p>
-									<p><label>Location</label> {{facility.facility_location}}</p>
-									<p><label>Time Zone</label> {{facility.facility_timezone}}</p>
-									<p><label>Zip Code</label> {{facility.facility_zipcode}}</p>
-									<p><label>Status</label> {{facility.facility_status | facilityStatus}}</p>
-									<p><label>Device</label> {{facility.facility_device_count|emptyVal}}</p>
-									<p><label>Users</label> {{facility.facility_user_count|emptyVal}}</p>
-									<p><label>Doors</label> {{facility.facility_Door_count|emptyVal}}</p>
+									<p><label>Name</label><span class="rightdetails">{{facility.facility_name}}</span></p>
+									<p><label>Location</label><span class="rightdetails">{{facility.facility_location}}</span></p>
+									<p><label>Time Zone</label><span class="rightdetails">{{facility.facility_timezone}}</span></p>
+									<p><label>Zip Code</label><span class="rightdetails">{{facility.facility_zipcode}}</span></p>
+									<p><label>Status</label><span class="rightdetails">{{facility.facility_status | facilityStatus}}</span></p>
+									<p><label>Device</label><span class="rightdetails">{{facility.facility_device_count|emptyVal}}</span></p>
+									<p><label>Users</label><span class="rightdetails">{{facility.facility_user_count|emptyVal}}</span></p>
+									<p><label>Doors</label><span class="rightdetails">{{facility.facility_Door_count|emptyVal}}</span></p>
 								</div>
 							</div>
 						</div>
