--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -70,12 +70,12 @@
 												<h4><strong>Account</strong> Details</h4>
 											</div>
 											<div class="form-group profiledetail">
-												<p><label>Name</label> {{userData.user_first_name}} {{userData.user_last_name}}</p>
-												<p><label>E-mail</label>{{userData.user_email}}</p>
-												<p><label>Phone</label>{{userData.phone_code}}</p>
-												<p><label>Address</label>{{userData.user_address}}</p>
-												<p><label>Status</label>{{userData.user_status}}</p>
-												<p><label>Expiration Date</label>{{userData.user_expiration_date}}</p>
+												<p><label>Name</label><span class="rightdetails">{{userData.user_first_name}} {{userData.user_last_name}}</span></p>
+												<p><label>E-mail</label><span class="rightdetails">{{userData.user_email}}</span></p>
+												<p><label>Phone</label><span class="rightdetails">{{userData.phone_code}}</span></p>
+												<p><label>Address</label><span class="rightdetails">{{userData.user_address}}</span></p>
+												<p><label>Status</label><span class="rightdetails">{{userData.user_status}}</span></p>
+												<p><label>Expiration Date</label><span class="rightdetails">{{userData.user_expiration_date}}</span></p>
 											</div>
 										</div>
 										<div class="col-md-6">
