--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -139,14 +139,14 @@
 											<h4><strong>Account</strong> Details</h4>
 										</div>
 										<div class="form-group profiledetail">
-											<p><label>Name</label>{{userData.user_first_name}} {{userData.user_last_name}}</p>
-											<p><label>E-mail</label>{{userData.user_email}}</p>
-											<p><label>Phone</label>{{userData.user_phone_no|tel}}</p>
-											<p><label>LCD Name</label>{{userData.user_name_on_lcd}} </p>
-											<p><label>Address</label>{{userData.user_address}}</p>
-											<p><label>Zip Code</label>{{userData.user_zipcode}}</p>
-											<p><label>Status</label>{{userData.user_status}}</p>
-											<p ng-if="userData.user_expiration_date!='0'"><label>Expiration Date</label>{{userData.user_expiration_date*1000 | date:'dd/MM/yyyy': 'UTC'}}</p>
+											<p><label>Name</label><span class="rightdetails">{{userData.user_first_name}} {{userData.user_last_name}}</span></p>
+											<p><label>E-mail</label><span class="rightdetails">{{userData.user_email}}</span></p>
+											<p><label>Phone</label><span class="rightdetails">{{userData.user_phone_no|tel}}</span></p>
+											<p><label>LCD Name</label><span class="rightdetails">{{userData.user_name_on_lcd}}</span></p>
+											<p><label>Address</label><span class="rightdetails">{{userData.user_address}}</span></p>
+											<p><label>Zip Code</label><span class="rightdetails">{{userData.user_zipcode}}</span></p>
+											<p><label>Status</label><span class="rightdetails">{{userData.user_status}}</span></p>
+											<p ng-if="userData.user_expiration_date!='0'"><label>Expiration Date</label><span class="rightdetails">{{userData.user_expiration_date*1000 | date:'dd/MM/yyyy': 'UTC'}}</span></p>
 										</div>
 									</div>
 								</div>
