Work on pending UI

--- a/elika-warehouse/styles/custom.css
+++ b/elika-warehouse/styles/custom.css
@@ -1596,6 +1596,15 @@ input.input-sm.input-unstyled::-webkit-input-placeholder {
     border-color: #0eba8c!important;
 }
 
+.error.layout {
+    text-align: center;
+    display: block;
+    margin: 75px 0 50px;
+    color: #e60000;
+    font-size: 18px;
+    font-weight: 500;
+}
+
 span.error {
     font-size: 13px;
     font-weight: 400;
