--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -48,30 +48,15 @@
 				</div>
 				
 				<div class="overflow">
-					<div class="div-width">
-					<div class="signupselect">
-						<select id="selectedQuestion1" ng-model="user.secret_question" name="selectedQuestion1" class="form-control underline-input mb-20" required="required" ng-options="item.sq_id as item.sq_question for item in lstSecurityQuestions track by item.sq_id" ng-init="getSecurityQuestion()">
+					<div style="margin-left: 30px;">
+						<select id="selectedQuestion1" ng-model="user.secret_question" name="selectedQuestion1" class="form-control underline-input" required="required" ng-options="item.sq_id as item.sq_question for item in lstSecurityQuestions track by item.sq_id" ng-init="getSecurityQuestion()">
 							<option value="">Select Secret Question</option>
-							<!-- <option value=1 label="What was your favorite place to visit as a child?">What was your favourite place to visit as a child?</option>
-							<option value=2 label="Who is your favorite actor, musician, or artist?">Who is your favorite actor, musician, or artist?</option>
-							<option value=3 label="What is the name of your favorite pet?">What is the name of your favorite pet?</option>
-							<option value=4 label="In what city were you born?">In what city were you born?</option>
-							<option value=5 label="What high school did you attend?">What high school did you attend?</option>
-							<option value=6 label="What is the name of your first school?">What is the name of your first school?</option>
-							<option value=7 label="What is your favorite movie?">What is your favorite movie?</option>
-							<option value=8 label="What is your mother's maiden name?">What is your mother's maiden name?</option>
-							<option value=9 label="What street did you grow up on?">What street did you grow up on?</option>
-							<option value=10 label="What was the make of your first car?">What was the make of your first car?</option>
-							<option value=11 label="When is your anniversary?">When is your anniversary?</option>
-							<option value=12 label="What is your favorite color?">What is your favorite color?</option>
-							<option value=13 label="What is your father's middle name?">What is your father's middle name?</option>
-							<option value=14 label="What is the name of your first grade teacher?">What is the name of your first grade teacher?</option>
-							<option value=15 label="What was your high school mascot?">What was your high school mascot?</option> -->
 						</select>
-					</div></div>
-					<div class="div-width">
-					<input type="text" name="answer" maxlength="30" class="form-control underline-input" placeholder="Answer" ng-model="user.secret_ans" required>
 					</div>
+				</div>
+				
+				<div class="overflow mb-40">
+					<input type="text" name="answer" maxlength="30" class="form-control underline-input" placeholder="Answer" ng-model="user.secret_ans" required>
 				</div>
 				
 				<div class="form-group text-left signuplabel" style="margin-left: 30px; margin-top: -15px;">        
