--- a/views/tmpl/admin/schedule/view-schedule.html
+++ b/views/tmpl/admin/schedule/view-schedule.html
@@ -46,9 +46,9 @@
 									 </p>
 										<p><label>Schedule Type</label><span>{{ViewSchedule.schedule_category == 'repeat' ? 'Repeatetive' : 'Custom'}}</span></p>
 										<p class="mt-20"><label><b>Schedules</b></label></p>
-										<p ng-repeat="schedule_inp in ViewSchedule.schedule_input"><label>{{schedule_inp.day}}</label><span>{{schedule_inp.starttime + ' - '+ schedule_inp.endtime + ' ' + schedule_inp.date}}</span></p>
-										<p class="mt-20"><label><b>Holidays</b></label><span ng-repeat="x in ViewSchedule.holiday_observed">{{x.hs_name}}<span ng-if="!$last">&nbsp;|&nbsp;</span></span></p>
-										<p class="mt-20"><label><b>Exceptions</b></label>
+										<p ng-repeat="schedule_inp in ViewSchedule.schedule_input"><label>{{schedule_inp.day}}</label><span>{{schedule_inp.starttime + ' - '+ schedule_inp.endtime + ' ' + schedule_inp.date}}</span><span ng-if="ViewSchedule.schedule_input.length == 0"> No Schedule</span></p>
+										<p class="mt-20"><label><b>Holidays</b></label><span ng-repeat="x in ViewSchedule.holiday_observed">{{x.hs_name}}<span ng-if="!$last">&nbsp;|&nbsp;</span></span><span ng-if="ViewSchedule.holiday_observed.length == 0"> No Holiday</span></p>
+										<p class="mt-20"><label><b>Exceptions</b></label><span ng-if="ViewSchedule.schedule_exceptions.length == 0"> No Exception</span>
 											<span>
 											 <ul class="" style="list-style: none; padding: 0;">
 												<li ng-repeat="e in ViewSchedule.schedule_exceptions">
@@ -60,6 +60,7 @@
 													</li>
 												</ul>
 											</span> 
+											
 										</p>
 									</div>												
 								</div>							
