--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -144,7 +144,7 @@
 								</div>
 							</div>
 							<div ng-if="mediatype=='mp4'||mediatype=='wav'" class="form-group col-sm-12">
-								<h3 class="mt-40">Video</h3>					
+								<h3 class="mt-40">Audio/Video</h3>					
 								<div class="tile-body p-0">
 									<!-- <video controls>
 										<source ng-src="{{trustSrc(mediafile)}}" type="video/mp4">
