--- a/elika-warehouse/styles/custom.css
+++ b/elika-warehouse/styles/custom.css
@@ -1320,6 +1320,7 @@ md-card:hover .moreitemsondevice {
 #header .topmenu .nav-right > li.active a span,
 #header .topmenu .nav-right > li.active span {
     color: #16a086!important;
+	font-weight: 500;
 }
 
 #header .topmenu .nav-right > li a:hover span,
